@@ -1,11 +1,11 @@
 Bug fixes/improvement for cgdb-0.6.0
 
 - TGDB interface changes
- [ ] Free tgdb_request data structures.
  [ ] Re-arrange the a2 subsystem to be easier and better to modify
  [ ] Modify the tgdb_response data structure to incorporate into it
     the associated tgdb_request data structure. Make sure to remove
     the cgdb.c:last_request variable.
+ [ ] Free tgdb_request data structures.
  [ ] Remove the tgdb_set_prompt_change_callback, and add it to the 
     tgdb_response mechanism.
  [ ] Provide a single interface to the user, that process's GDB output.
@@ -13,7 +13,6 @@ Bug fixes/improvement for cgdb-0.6.0
     then when a command is stil being processed. Also, when a command
     is finished, then the user can look at the tgdb_responses.
  [ ] Figure out how to get extra prototypes out of cgdb.h
- [ ] Delete all annotations that are not being used.
 
 - What happens if there is no matches for tab completion and you hit
   tab twice?
@@ -50,6 +49,7 @@ Closed:
  [x] Document INTERFACE_REQUEST_COMMANDS
  [x] Empty command queue when the ^c signal is reached. [should this be done
      in CGDB or TGDB]? Done in TGDB.
+ [x] Delete all annotations that are not being used.
 
 - If you hit 'o', an extra prompt appears at the console. If you set a 
   breakpoint from the GUI, this doesn't happen. That's because TGDB hacks
