@@ -8,6 +8,10 @@
 
 11/23/2005 Bob Rossi <bob@brasko.net>
 
+	* RELEASE_TODO: Update.
+
+11/23/2005 Bob Rossi <bob@brasko.net>
+
 	* RELEASE_TODO: Rearrange items.
 
 11/23/2005 Bob Rossi <bob@brasko.net>
